added start progress bar animation on scroll

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "format": "expanded",
         "extensionName": ".css",
         "savePath": null
-    }]
+    }],
+    "prettier.disableLanguages": ["html", "css", "scss"]
 }
